--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ h2 {
   max-width: 600px;
   height: auto;
   box-shadow: var(--shadow);
+  margin: 0;
 }
 
 .about-me-img img {
@@ -110,6 +111,7 @@ main {
   position: relative;
   width: 300px;
   height: 200px;
+  margin: 0;
 }
 
 .project-img img {
