--- a/style.css
+++ b/style.css
@@ -9,11 +9,16 @@ body {
   background-color: var(--white);
 }
 
+body:not(.keyboard-user) button:focus,
+body:not(.keyboard-user) a:focus {
+  outline: none;
+}
+
 .skip-link {
   position: absolute;
   top: -40px;
   left: 0;
-  background: var(--blue);
+  background: black;
   color: white;
   padding: 10px;
   z-index: 100;
